Include authorId when creating books

--- a/public/book.html
+++ b/public/book.html
@@ -901,6 +901,7 @@
                 const newBookCode = `book${Date.now()}`;
                 await setDoc(doc(db, 'Book', newBookCode), {
                     author: window.authorName || '',
+                    authorId: bookAuthorUid,
                     owner: bookAuthorUid,
                     createdAt: serverTimestamp(),
                     title
