feat: rename site to 📚 에이두 북메이커

--- a/public/index.html
+++ b/public/index.html
@@ -334,7 +334,7 @@
             <div id="library-tab-content" class="tab-content">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-2xl font-bold">📚 에이두 도서관</h2>
-                    <a href="book.html" id="create-ai-book-btn" class="btn btn-primary">에이두 AI 책만들기</a>
+                    <a href="book.html" id="create-ai-book-btn" class="btn btn-primary flex items-center gap-2">📚 <span>에이두 북메이커</span></a>
                 </div>
                 <p>준비중입니다.</p>
             </div>
