--- a/public/book.html
+++ b/public/book.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 책 만들기</title>
+    <title>📚 에이두 북메이커</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -84,7 +84,7 @@
 
     <div id="book-content" class="hidden">
     <div class="max-w-7xl mx-auto mb-4 flex justify-between items-center">
-        <h1 class="text-2xl font-bold">에이두 AI 책만들기</h1>
+        <h1 class="flex items-center gap-2 text-3xl font-extrabold text-amber-600">📚 <span>에이두 북메이커</span></h1>
         <div class="flex items-center gap-3 bg-white border rounded-full px-4 py-2">
             <span id="role-badge" class="font-bold mr-1 hidden">교사</span>
             <span id="display-user-name" class="font-bold"></span>
@@ -110,7 +110,7 @@
             <header class="flex flex-col sm:flex-row justify-between items-center mb-4 gap-4">
                 <div class="flex items-end gap-2">
                     <button id="back-to-list-btn" class="bg-gray-500 text-white px-3 py-1 rounded-lg">목록으로</button>
-                    <h1 class="text-2xl md:text-4xl font-bold text-emerald-800">AI 책 만들기</h1>
+                    <h1 class="text-2xl md:text-4xl font-bold text-emerald-800 flex items-center gap-2">📚 <span>에이두 북메이커</span></h1>
                     <span class="text-sm text-gray-600">글쓴이: <span id="author-display" class="book-author-sync"></span></span>
                 </div>
                 <div id="viewer-controls" class="flex flex-wrap justify-center items-center gap-2">
