Update Firebase storage path

--- a/public/book.html
+++ b/public/book.html
@@ -1232,7 +1232,7 @@
             apiKey: "AIzaSyDCeJPDQUNi-KmJ9DhkTRIu-9t2PGZCpt0",
             authDomain: "mansungcoin-c6e06.firebaseapp.com",
             projectId: "mansungcoin-c6e06",
-            storageBucket: "mansungcoin-c6e06.appspot.com",
+            storageBucket: "mansungcoin-c6e06.firebasestorage.app",
             messagingSenderId: "704809284946",
             appId: "1:704809284946:web:3e71d98f38810577e1768b"
         };
